--- a/Combine Stats.html
+++ b/Combine Stats.html
@@ -12,9 +12,9 @@
 
 
     <div class="topnav">
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Hello.html">Lifts and Offers</a>
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/WorkoutRoutines.html">Workout routines</a>
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Injuries.html">Injuries</a>
+    <a href="Hello.html">Lifts and Offers</a>
+    <a href="WorkoutRoutines.html">Workout routines</a>
+    <a href="Injuries.html">Injuries</a>
 </div>
 
 </header>
