--- a/WorkoutRoutines.html
+++ b/WorkoutRoutines.html
@@ -9,9 +9,9 @@
 <body>
 <header>
     <div class="topnav">
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Hello.html">Lifts and Offers</a>
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Combine%20Stats.html">Combine Stats</a>
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Injuries.html">Injuries</a>
+    <a href="Hello.html">Lifts and Offers</a>
+    <a href="Combine%20Stats.html">Combine Stats</a>
+    <a href="Injuries.html">Injuries</a>
 </div>
 </header>
 
