--- a/Hello.html
+++ b/Hello.html
@@ -9,9 +9,9 @@
   <header>
 
     <div class="topnav">
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Combine%20Stats.html">Combine Stats</a>
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/WorkoutRoutines.html">Workout routines</a>
-    <a href="file:///Users/lucca/Desktop/Lab1-Part2/Injuries.html">Injuries</a>
+    <a href="Combine%20Stats.html">Combine Stats</a>
+    <a href="WorkoutRoutines.html">Workout routines</a>
+    <a href="Injuries.html">Injuries</a>
 
     </div>
 
