--- a/Combine Stats.html
+++ b/Combine Stats.html
@@ -12,7 +12,7 @@
 
 
     <div class="topnav">
-    <a href="Hello.html">Lifts and Offers</a>
+    <a href="index.html">Lifts and Offers</a>
     <a href="WorkoutRoutines.html">Workout routines</a>
     <a href="Injuries.html">Injuries</a>
 </div>
