--- a/Injuries.html
+++ b/Injuries.html
@@ -9,7 +9,7 @@
   <header>
 
       <div class="topnav">
-      <a href="Hello.html">Lifts and Offers</a>
+      <a href="index.html">Lifts and Offers</a>
       <a href="Combine%20Stats.html">Combine Stats</a>
     <a href="WorkoutRoutines.html">Workout Routines</a>
 </div>
