--- a/WorkoutRoutines.html
+++ b/WorkoutRoutines.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="topnav">
-    <a href="Hello.html">Lifts and Offers</a>
+    <a href="index.html">Lifts and Offers</a>
     <a href="Combine%20Stats.html">Combine Stats</a>
     <a href="Injuries.html">Injuries</a>
 </div>
